Game/TicTacToeGame/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-service
  labels:
    app: tic-tac-toe-game
spec:
  type: ClusterIP
  selector:
    app: tic-tac-toe-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
