Game/TicTacToeGame/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:329599652659:certificate/230912a1-ae44-4335-834c-af4b4c3fe04b
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: game.hackandbuild.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tic-tac-toe-service
                port:
                  number: 80
